--- a/src/templates/components/seoMenu/_checklistTab.twig
+++ b/src/templates/components/seoMenu/_checklistTab.twig
@@ -3,9 +3,11 @@
 {# ======================= #}
 <section class="cat-toolbar-seo-menu-checklist" toolbar-show="seoMenuActiveTab === 'checklist'">
     <div class="cat-toolbar-seo-menu-checklist-top">
-        <h2 class="cat-typo-body-md cat-semi-bold">{{ "Checklist"|t }}</h2>
+        <h2 class="cat-typo-body-md cat-semi-bold">{{ "Checklist"|t('author-toolbar') }}</h2>
 
-        <p class="cat-typo-body-sm">{{ "This is a basic checklist that all pages should try to check off for a well maintained SEO performance"|t }}</p>
+        <p class="cat-typo-body-sm">
+            {{ "This is a basic checklist that all pages should try to check off for a well maintained SEO performance"|t('author-toolbar') }}
+        </p>
     </div>
 
     <ul class="cat-toolbar-seo-menu-checklist-results">
