--- a/src/templates/requests/_seoPreviews.twig
+++ b/src/templates/requests/_seoPreviews.twig
@@ -18,9 +18,11 @@
 <div id="cat-seo-previews" class="cat-toolbar-seo-menu-previews-results">
     <div class="cat-toolbar-seo-menu-previews-results-top">
         <div>
-            <h2 class="cat-typo-body-md cat-semi-bold">{{ "Platforms"|t }}</h2>
+            <h2 class="cat-typo-body-md cat-semi-bold">{{ "Platforms"|t('author-toolbar') }}</h2>
 
-            <p class="cat-typo-body-sm">{{ "Get a preview of how your page will look for other people when shared on different social platforms"|t }}</p>
+            <p class="cat-typo-body-sm">
+                {{ "Get a preview of how your page will look for other people when shared on different social platforms"|t('author-toolbar') }}
+            </p>
         </div>
 
         <ul class="cat-toolbar-seo-menu-previews-results-option-tabs">
