--- a/src/templates/components/seoMenu/_structuredData.twig
+++ b/src/templates/components/seoMenu/_structuredData.twig
@@ -7,10 +7,10 @@
 >
     <div class="cat-toolbar-seo-menu-structured-data-top">
         <div>
-            <h2 class="cat-typo-body-md cat-semi-bold">{{ "Structured data"|t }}</h2>
+            <h2 class="cat-typo-body-md cat-semi-bold">{{ "Structured data"|t('author-toolbar') }}</h2>
 
             <p class="cat-typo-body-sm">
-                {{ "This is an overview of all the structured data on this page. Structured data is used by Google to provide enhanced search results"|t }}
+                {{ "This is an overview of all the structured data on this page. Structured data is used by Google to provide enhanced search results"|t('author-toolbar') }}
             </p>
         </div>
 
