--- a/src/web/assets/src/scss/index.scss
+++ b/src/web/assets/src/scss/index.scss
@@ -1,6 +1,7 @@
 @use "variables";
 @use "typography";
 @use "breakpoints" as *;
+@use "admin";
 
 body {
 	margin-bottom: 120px;
@@ -1672,10 +1673,9 @@ body {
 		right: -1px;
 		z-index: -1;
 		transform: translateY(-100%);
-		max-height: 360px;
-		min-width: 450px;
 		overflow-y: scroll;
-
+		max-height: 360px;
+		min-width: 340px;
 		background-color: var(--clr-white);
 		border: 1px solid var(--clr-grey-300);
 		border-top-left-radius: 4px;
@@ -1684,6 +1684,10 @@ body {
 		opacity: 0;
 		pointer-events: none;
 		transition: all ease-out 0.3s;
+
+		@include styles-above(tabletS) {
+			min-width: 450px;
+		}
 
 		& > *:not(:first-child) {
 			border-top: 1px solid var(--clr-grey-300);
@@ -1710,8 +1714,14 @@ body {
 
 		&-item {
 			display: flex;
-			justify-content: space-between;
-			align-items: center;
+			flex-direction: column;
+			gap: 4px;
+
+			@include styles-above(tabletS) {
+				justify-content: space-between;
+				align-items: center;
+				flex-direction: row;
+			}
 
 			a {
 				color: var(--clr-grey-900);
